--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	    
      <b>Mar 2025</b><br>
     <span class="easylink">
-    【ICAIF'25】 We will host the <b>ACM International Conference on AI in Finance (ICAIF) 2025</b> in Singapore! The official website and CFP will be released soon. Stay tuned! 
+    【ICAIF'25】 We will host the <b>ACM International Conference on AI in Finance (ICAIF) 2025</b> in Singapore! The <a href="https://icaif25.org/" target="_blank">Official Website</a> is available now, and the CFP will be released soon. Stay tuned! 
     </span><br><br>
 
      <b>Feb 2025</b><br>
@@ -207,7 +207,19 @@ Email: zhfengbin AT gmail.com</a><br>
 
 
 <!-- <b> In the Year of 2023: </b> </br></br> -->
+<!-- <table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2410.17236" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Large Language Models Empowered Personalized Web Agents</span> 
+      <br>Hongru Cai, Yongqi Li, Wenjie Wang, <strong>Fengbin Zhu</strong>, Xiaoyu Shen, Wenjie Li, and Tat-Seng Chua
+    <br>SIGIR 2025 (<font color='red'>Oral</font>)
+  </td> 
+  </tr>
+ </tbody>
+</table> -->
 
+	
 <table>
   <tbody>
   <tr>
@@ -350,18 +362,6 @@ Deliberative User Preference Alignment</span>
     <td><span class="title">Towards Complex Document Understanding By Discrete Reasoning</span> 
       <br><strong>Fengbin Zhu</strong>, Wenqiang Lei, Fuli Feng, Chao Wang, Haozhou Zhang, Tat-Seng Chua
     <br>ACM MM 2022 (Poster)
-  </td> 
-  </tr>
- </tbody>
-</table>
-
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://arxiv.org/abs/2206.06890" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">RDU: A Region-based Approach to Form-style Document Understanding</span> 
-      <br><strong>Fengbin Zhu</strong>, Chao Wang, Wenqiang Lei, Ziyang Liu, Tat Seng Chua
-    <br>Arxiv 2022
   </td> 
   </tr>
  </tbody>
