--- a/index.html
+++ b/index.html
@@ -215,22 +215,42 @@ Email: zhfengbin AT gmail.com</a><br>
 <h2 style="CLEAR: both">Publications <a href="https://scholar.google.com/citations?user=-rxzvfcAAAAJ&hl=en" target="_blank">Google Scholar</a> </h2> &nbsp;&nbsp;  #Equal Contribution  &nbsp;&nbsp;  *Corresponding Author 
 </br>
 
-
-
-<!-- <b> In the Year of 2023: </b> </br></br> -->
-<!-- <table>
+<table>
   <tbody>
   <tr>
-    <td class="left"><a href="https://arxiv.org/abs/2410.17236" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Large Language Models Empowered Personalized Web Agents</span> 
-      <br>Hongru Cai, Yongqi Li, Wenjie Wang, <strong>Fengbin Zhu</strong>, Xiaoyu Shen, Wenjie Li, and Tat-Seng Chua
-    <br>SIGIR 2025 (<font color='red'>Oral</font>)
+    <td class="left"><a href="https://arxiv.org/pdf/2504.17349" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">DRC: Enhancing Personalized Image Generation via Disentangled Representation Composition</span> 
+      <br>Yiyan Xu, Wuqiang Zheng, Wenjie Wang, <strong>Fengbin Zhu</strong>, Xinting Hu, Yang Zhang, Fuli Feng, and Tat-Seng Chua
+    <br>MM 2025 (<font color='red'>Oral</font>)
   </td> 
   </tr>
  </tbody>
-</table> -->
+</table>
 
-	
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/pdf/2503.05185" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Towards Temporal-Aware Multi-Modal Retrieval Augemented Generation in Finance</span> 
+      <br><strong>#Fengbin Zhu</strong>, #Junfeng Li, Liangming Pan, Wenjie Wang, Fuli Feng, Chao Wang, Huanbo Luan, and Tat-Seng Chua
+    <br>MM 2025
+  </td> 
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Heterogeneous User Modeling for LLM-based Recommendation</span> 
+      <be>Honghui Bao, Wenjie Wang, Xinyu Lin,<strong>*Fengbin Zhu</strong>, Teng Sun, Fuli Feng and Tat-Seng Chua
+    <br>RecSys 2025
+  </td> 
+  </tr>
+ </tbody>
+</table>
+
 <table>
   <tbody>
   <tr>
@@ -284,8 +304,7 @@ Email: zhfengbin AT gmail.com</a><br>
   <tbody>
   <tr>
     <td class="left"><a href="https://arxiv.org/abs/2502.02061" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Reason4Rec: Large Language Models for Recommendation with
-Deliberative User Preference Alignment</span> 
+    <td><span class="title">Reason4Rec: Large Language Models for Recommendation with Deliberative User Preference Alignment</span> 
       <br>Yi Fang, Wenjie Wang, Yang Zhang, <strong>Fengbin Zhu</strong>, Qifan Wang, Fuli Feng, Xiangnan He
     <br>Arxiv 2025
   </td> 
@@ -305,17 +324,6 @@ Deliberative User Preference Alignment</span>
  </tbody>
 </table>
 	
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://arxiv.org/abs/2410.22888" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Effective and Efficient Adversarial Detection for Vision-Language Models via A Single Vector</span> 
-      <br>#Youcheng Huang, #<strong>Fengbin Zhu</strong>, Jingkun Tang, Pan Zhou, Wenqiang Lei, Jiancheng Lv and Tat-Seng Chua
-    <br>Arxiv 2024
-  </td> 
-  </tr>
- </tbody>
-</table>
 
 <table>
   <tbody>
