--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ Email: zhfengbin AT gmail.com</a><br>
   <tbody>
   <tr>
     <td class="left"><a href="https://arxiv.org/pdf/2503.05185" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Towards Temporal-Aware Multi-Modal Retrieval Augemented Generation in Finance</span> 
+    <td><span class="title">Towards Temporal-Aware Multi-Modal Retrieval Augmented Generation in Finance</span> 
       <br><strong>#Fengbin Zhu</strong>, #Junfeng Li, Liangming Pan, Wenjie Wang, Fuli Feng, Chao Wang, Huanbo Luan, and Tat-Seng Chua
     <br>MM 2025
   </td> 
@@ -244,7 +244,7 @@ Email: zhfengbin AT gmail.com</a><br>
   <tr>
     <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Heterogeneous User Modeling for LLM-based Recommendation</span> 
-      <be>Honghui Bao, Wenjie Wang, Xinyu Lin,<strong>*Fengbin Zhu</strong>, Teng Sun, Fuli Feng and Tat-Seng Chua
+      <br>Honghui Bao, Wenjie Wang, Xinyu Lin,<strong>*Fengbin Zhu</strong>, Teng Sun, Fuli Feng and Tat-Seng Chua
     <br>RecSys 2025
   </td> 
   </tr>
