--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Email: zhfengbin AT gmail.com</a><br>
 </tbody></table>
 
 <div style="margin-top:20px;">
-  I am a Postdoc Research Fellow at <a href="https://www.nextcenter.org/" , target="_blank"> NExT Research Center </a> National University of Singapore (NUS), working with  <a href="https://www.chuatatseng.com/" , target="_blank"> Prof. Tat-Seng Chua</a>. I earned my PhD from NUS in June 2024, also supervised by Prof. Chua. My research interests include Natural Language Processing (NLP), Information Retrieval (IR), Document Intelligence (DI), and the application of AI in finance. 
+  I am a Postdoc Research Fellow at <a href="https://www.nextcenter.org/" , target="_blank"> NExT Research Center </a> National University of Singapore (NUS), working with  <a href="https://www.chuatatseng.com/" , target="_blank"> Prof. Tat-Seng Chua</a>. I earned my PhD from NUS in June 2024, also supervised by Prof. Chua. My research interests include Multi-modal/Heterogeneous Data Retrieval, Understanding, Reasoning and Generation, and AI for Finance. 
 </div>
 
 <br>
@@ -246,6 +246,18 @@ Email: zhfengbin AT gmail.com</a><br>
     <td><span class="title">Heterogeneous User Modeling for LLM-based Recommendation</span> 
       <br>Honghui Bao, Wenjie Wang, Xinyu Lin,<strong>*Fengbin Zhu</strong>, Teng Sun, Fuli Feng and Tat-Seng Chua
     <br>RecSys 2025 (<font color='red'>Oral</font>)
+  </td> 
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Unified Category and Style Generalization for Instance-Level Sketch Retrieval</span> 
+      <br>Zechao Hu, Zhengwei Yang, Hao Li, Yixiong Zou, <strong>Fengbin Zhu</strong>, and Zheng Wang
+    <br>SIGIR 2025 (<font color='red'>Oral</font>)
   </td> 
   </tr>
  </tbody>
