--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Email: zhfengbin AT gmail.com</a><br>
 </tbody></table>
 
 <div style="margin-top:20px;">
-  I am a Postdoc Research Fellow at <a href="https://www.nextcenter.org/" , target="_blank"> NExT Research Center </a> National University of Singapore (NUS), working with  <a href="https://www.chuatatseng.com/" , target="_blank"> Prof. Tat-Seng Chua</a>. I earned my PhD from NUS in June 2024, also supervised by Prof. Chua. My research interests include Multi-modal/Heterogeneous Data Retrieval, Understanding, Reasoning and Generation, and AI for Finance. 
+  I am a Postdoc Research Fellow at <a href="https://www.nextcenter.org/" , target="_blank"> NExT Research Center </a> National University of Singapore (NUS), working with  <a href="https://www.chuatatseng.com/" , target="_blank"> Prof. Tat-Seng Chua</a>. I earned my PhD from NUS in June 2024, also supervised by Prof. Chua. My research interests include Multimodal/Heterogenous Retrieval, Understanding and Reasoning, LLM-based Agents, and AI for Finance. 
 </div>
 
 <br>
