--- a/index.html
+++ b/index.html
@@ -460,14 +460,14 @@ Email: zhfengbin AT gmail.com</a><br>
 
 <table>
   <tbody><tr>
-    <td> <span class="title">Postdoc Research Fellow</span>, National University of Singapore, Jul 2024 - Present   <br>
+    <td> <span class="title">Postdoc Research Fellow</span>, National University of Singapore, Jul 2024 -    <br>
 			Advisior: <a href="https://www.chuatatseng.com/" target="_blank">Prof. Tat-Seng Chua</a> (<a href="http://www.nextcenter.org/" target="_blank">NExT++: NUS-Tsinghua-Southampton Extreme Search Center</a>)
 		</td></tr></tbody>
 </table>
 
 <table>
   <tbody><tr>
-    <td> <span class="title">Technology Director</span>, <a href="https://www.6estates.com/about" target="_blank"> 6Estates Pte Ltd</a>, Mar 2015 - Jun 2024 
+    <td> <span class="title">Technology Director</span>, <a href="https://www.6estates.com/about" target="_blank"> 6Estates Pte Ltd</a>, Mar 2015 -  
     </td></tr></tbody>
 </table>
 
