--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     <h2>News</h2><br>
     <font size="3px">
 
+    <b>Aug 2025</b><br>
+    <span class="easylink">
+     【EMNLP'25】 One full paper has been accepted by EMNLP'25 about <b>LLM Personalization</b>.
+    </span><br><br>
+		
    <b>Jul 2025</b><br>
     <span class="easylink">
      【MM'25】 Two full papers have been accepted by ACM MM'25: one paper about <b>Temporal-Aware Multi-Modal
