--- a/index.html
+++ b/index.html
@@ -162,7 +162,6 @@ Email: zhfengbin AT gmail.com</a><br>
  </tbody>
 </table>
 	
-	
 <table>
   <tbody>
   <tr>
@@ -182,7 +181,7 @@ Email: zhfengbin AT gmail.com</a><br>
     <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Long Context vs. RAG: Strategies for Processing Long Documents in LLMs</span> 
       <br>Xinze Li, Yushi Bai, Bowen Jin, <b>Fengbin Zhu</b>, Liangming Pan and Yixin Cao
-    <br>SIGIR 2025 
+    <br>SIGIR 2025 &nbsp;&nbsp; <a href="https://sites.google.com/view/sigir25-lc-vs-rag/" target="_blank">Website</a> 
   </td>
   </tr>
  </tbody>
