--- a/index.html
+++ b/index.html
@@ -222,6 +222,18 @@ Email: zhfengbin AT gmail.com</a><br>
 <table>
   <tbody>
   <tr>
+    <td class="left"><a href="https://arxiv.org/pdf/2507.20849" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Latent Inter-User Difference Modeling for LLM Personalization</span> 
+      <br>Yilun Qiu, Tianhao Shi, Xiaoyan Zhao, <strong>Fengbin Zhu</strong>, Yang Zhang, Fuli Feng
+    <br>EMNLP 2025 (Main Conference)
+  </td> 
+  </tr>
+ </tbody>
+</table>
+	
+<table>
+  <tbody>
+  <tr>
     <td class="left"><a href="https://arxiv.org/pdf/2504.17349" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">DRC: Enhancing Personalized Image Generation via Disentangled Representation Composition</span> 
       <br>Yiyan Xu, Wuqiang Zheng, Wenjie Wang, <strong>Fengbin Zhu</strong>, Xinting Hu, Yang Zhang, Fuli Feng, and Tat-Seng Chua
