--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ Email: zhfengbin AT gmail.com</a><br>
     <td class="left"><a href="https://arxiv.org/pdf/2503.05185" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Towards Temporal-Aware Multi-Modal Retrieval Augmented Generation in Finance</span> 
       <br><strong>#Fengbin Zhu</strong>, #Junfeng Li, Liangming Pan, Wenjie Wang, Fuli Feng, Chao Wang, Huanbo Luan, and Tat-Seng Chua
-    <br>MM 2025
+    <br>MM 2025 (<font color='red'>Oral</font>)
   </td> 
   </tr>
  </tbody>
