--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ RAG</b> in finance and the other about <b>LLM-based Personalized Image Generatio
 	    
     <b>Apr 2025</b><br>
     <span class="easylink">
-     【SIGIR'25】 We are giving a Tutorial titled <b>Long Context vs. RAG: Strategies for Processing Long Documents in LLMs</b>.
+     【SIGIR'25】 We are giving a Tutorial titled <b>Long Context vs. RAG: Strategies for Processing Long Documents in LLMs</b>. The <a href="https://sites.google.com/view/sigir25-lc-vs-rag/" target="_blank">Official Website</a> is available now.
     </span><br><br>
 	    
     <b>Apr 2025</b><br>
