--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Email: zhfengbin AT gmail.com</a><br>
 </tbody></table>
 
 <div style="margin-top:20px;">
-  I am a Postdoc Research Fellow at <a href="https://www.nextcenter.org/" , target="_blank"> NExT Research Center </a> National University of Singapore (NUS), working with  <a href="https://www.chuatatseng.com/" , target="_blank"> Prof. Tat-Seng Chua</a>. I earned my PhD from NUS in June 2024, also supervised by Prof. Chua. My research interests include Multimodal/Heterogenous Retrieval, Understanding and Reasoning, LLM-based Agents, and AI for Finance. 
+  I am a Postdoc Research Fellow at <a href="https://www.nextcenter.org/" , target="_blank"> NExT Research Center </a> National University of Singapore (NUS), working with  <a href="https://www.chuatatseng.com/" , target="_blank"> Prof. Tat-Seng Chua</a>. I earned my PhD from NUS in June 2024, also supervised by Prof. Chua. My research interests include Multimodal/heterogeneous retrieval, Understanding and Reasoning, LLM-based Agents, LLM Evaluation, and AI for Finance. 
 </div>
 
 <br>
@@ -144,7 +144,7 @@ Email: zhfengbin AT gmail.com</a><br>
 <!-- =======================================================================!-->
 
 <div>
-    <font color='red'>PS: I am actively looking for highly motivated PhD/master/undergraduate students to collaborate on various interesting research topics, including retrieval-augmented generation, multi-modal LLM for document intelligence, financial LLM, and LLM-based agents, etc. If you have interest, please feel free to send your CV to zhfengbin@gmail.com.</font>
+    <font color='red'>PS: I am actively looking for highly motivated PhD/Master/Undergraduate students to collaborate on various interesting research topics above. If you have interest, please feel free to send your CV to zhfengbin@gmail.com.</font>
 </div>
 
 	
