--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ Email: zhfengbin AT gmail.com</a><br>
     <td class="left"><a href="https://arxiv.org/pdf/2507.20849" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Latent Inter-User Difference Modeling for LLM Personalization</span> 
       <br>Yilun Qiu, Tianhao Shi, Xiaoyan Zhao, <strong>Fengbin Zhu</strong>, Yang Zhang, Fuli Feng
-    <br>EMNLP 2025 (Main Conference)
+    <br>EMNLP 2025 (<font color='red'>Main, Oral</font>)
   </td> 
   </tr>
  </tbody>
@@ -439,13 +439,14 @@ Email: zhfengbin AT gmail.com</a><br>
 </table>
 
 
-
 <h2 style="CLEAR: both;">Professional Services</h2>
 <table><tbody><tr><td>
     Local co-chair of <span class="title">ACM International Conference on AI in Finance (ICAIF 2025) </span> <br>
     Co-organizer of <span class="title">The 2nd Financial Information Retrieval (FinIR) Workshop at SIGIR 2025 </span> <br>
+    Co-organizer of <span class="title">a Tutorial at SIGIR 2025: Long Context vs. RAG </span> <br>
     Session Chair of <span class="title">ACM International Conference on AI in Finance (ICAIF 2024)  </span> <br>
-    Program Committee Member of <span class="title">ACM SIGIR (2025) </span> <br>
+    Program Committee Member of <span class="title">ACM WSDM (2026) </span> <br>
+	Program Committee Member of <span class="title">ACM SIGIR (2025) </span> <br> 
     Program Committee Member of <span class="title">ICCV (2025) </span> <br>
     Program Committee Member of <span class="title">ACL ARR (2024, 2025) </span> <br>
     Program Committee Member of <span class="title">COLING (2025) </span> <br>
