--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
     <h2>News</h2><br>
     <font size="3px">
 
+	 <b>Aug 2025</b><br>
+    <span class="easylink">
+    【AAAI'26】 We are organizing the <b>Agentic AI in Financial Services</b> at AAAI'26; The official website and CFP will be released soon. Stay tuned!
+    </span><br><br>
+		
     <b>Aug 2025</b><br>
     <span class="easylink">
      【EMNLP'25】 One full paper has been accepted by EMNLP'25 about <b>LLM Personalization</b>.
     </span><br><br>
 		
-   <b>Jul 2025</b><br>
+    <b>Jul 2025</b><br>
     <span class="easylink">
      【MM'25】 Two full papers have been accepted by ACM MM'25: one paper about <b>Temporal-Aware Multi-Modal
 RAG</b> in finance and the other about <b>LLM-based Personalized Image Generation</b>. 
