--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 	 <b>Aug 2025</b><br>
     <span class="easylink">
-    【AAAI'26】 We are organizing the workshop on <b>Agentic AI in Financial Services</b> at AAAI'26; The official website and CFP will be released soon. Stay tuned!
+    【AAAI'26】 We are organizing the <b>Agentic AI in Financial Services</b> Workshop at AAAI'26; The official website and CFP will be released soon. Stay tuned!
     </span><br><br>
 		
     <b>Aug 2025</b><br>
