--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Email: zhfengbin AT gmail.com</a><br>
 	
 <!-- =======================================================================!-->
 <h2 style="CLEAR: both;">Conferences, Workshops, Tutorials and Surveys</h2>
-
+	
 <table>
   <tbody>
   <tr>
@@ -186,7 +186,7 @@ Email: zhfengbin AT gmail.com</a><br>
     <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Long Context vs. RAG: Strategies for Processing Long Documents in LLMs</span> 
       <br>Xinze Li, Yushi Bai, Bowen Jin, <b>Fengbin Zhu</b>, Liangming Pan and Yixin Cao
-    <br>SIGIR 2025 &nbsp;&nbsp; <a href="https://sites.google.com/view/sigir25-lc-vs-rag/" target="_blank">Website</a> 
+    <br>SIGIR 2025 (Tutorial) &nbsp;&nbsp; <a href="https://sites.google.com/view/sigir25-lc-vs-rag/" target="_blank">Website</a> 
   </td>
   </tr>
  </tbody>
