--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 
 	 <b>Aug 2025</b><br>
     <span class="easylink">
+    【ICAIF'25】We are organizing a <b>Financial Document Deep Research</b> Grand Challenge at ICAIF'25; The <a href="https://finddr2025.github.io/" target="_blank">Official Website</a> is available now!
+    </span><br><br>
+		
+	 <b>Aug 2025</b><br>
+    <span class="easylink">
     【AAAI'26】 We are organizing the <b>Agentic AI in Financial Services</b> Workshop at AAAI'26; The official website and CFP will be released soon. Stay tuned!
     </span><br><br>
 		
