--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 	 <b>Aug 2025</b><br>
     <span class="easylink">
-    【ICAIF'25】We are organizing a <b>Financial Document Deep Research</b> Grand Challenge at ICAIF'25; The <a href="https://finddr2025.github.io/" target="_blank">Official Website</a> is available now!
+    【ICAIF'25】We are organizing a <b>Financial Document Deep Research (FinDDR)</b> Grand Challenge at ICAIF'25; The <a href="https://finddr2025.github.io/" target="_blank">Official Website</a> is available now!
     </span><br><br>
 		
 	 <b>Aug 2025</b><br>
@@ -159,7 +159,18 @@ Email: zhfengbin AT gmail.com</a><br>
 
 	
 <!-- =======================================================================!-->
-<h2 style="CLEAR: both;">Conferences, Workshops, Tutorials and Surveys</h2>
+<h2 style="CLEAR: both;">Conferences, Workshops, Tutorials, Competitions and Surveys</h2>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://finddr2025.github.io/" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Financial Document Deep Research (FinDDR) Grand Challenge</span> 
+    <br> ICAIF 2025 &nbsp;&nbsp; <a href="https://finddr2025.github.io/" target="_blank">Website</a>
+  </td>
+  </tr>
+ </tbody>
+</table>
 	
 <table>
   <tbody>
