--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     <h2>News</h2><br>
     <font size="3px">
 
+			
+	 <b>Sep 2025</b><br>
+    <span class="easylink">
+    【NeurIPs'25】One paper has been accepted by NeurIPs 2025 about <b>LLM-based Personalized Recommendation</b>!
+    </span><br><br>
+		
 	 <b>Aug 2025</b><br>
     <span class="easylink">
     【ICAIF'25】We are organizing a <b>Financial Document Deep Research (FinDDR)</b> Grand Challenge at ICAIF'25; The <a href="https://finddr2025.github.io/" target="_blank">Official Website</a> is available now!
@@ -243,10 +249,23 @@ Email: zhfengbin AT gmail.com</a><br>
 <table>
   <tbody>
   <tr>
+    <td class="left"><a href="https://arxiv.org/pdf/2506.13229" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">IGD: Token Decisiveness Modeling via Information Gain in LLMs for Personalized Recommendation</span> 
+      <br>Zijie Lin, Yang Zhang, Xiaoyan Zhao, <strong>Fengbin Zhu</strong>, Fuli Feng, Tat-Seng Chua
+    <br>NeurIPs 2025 
+  </td> 
+  </tr>
+ </tbody>
+</table>
+
+	
+<table>
+  <tbody>
+  <tr>
     <td class="left"><a href="https://arxiv.org/pdf/2507.20849" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Latent Inter-User Difference Modeling for LLM Personalization</span> 
       <br>Yilun Qiu, Tianhao Shi, Xiaoyan Zhao, <strong>Fengbin Zhu</strong>, Yang Zhang, Fuli Feng
-    <br>EMNLP 2025 (<font color='red'>Main, Oral</font>)
+    <br>EMNLP 2025 (<font color='red'>Oral</font>)
   </td> 
   </tr>
  </tbody>
