--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		
 	 <b>Aug 2025</b><br>
     <span class="easylink">
-    【AAAI'26】 We are organizing the <b>Agentic AI in Financial Services</b> Workshop at AAAI'26; The official website and CFP will be released soon. Stay tuned!
+    【AAAI'26】 We are organizing the <b>Agentic AI in Financial Services</b> Workshop at AAAI'26; The <a href="https://ai-4-finance.pages.dev/"  target="_blank">Official Website and CFP </a> are available now!
     </span><br><br>
 		
     <b>Aug 2025</b><br>
