--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ Email: zhfengbin AT gmail.com</a><br>
   <tr>
     <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Heterogeneous User Modeling for LLM-based Recommendation</span> 
-      <br>Honghui Bao, Wenjie Wang, Xinyu Lin,<strong>*Fengbin Zhu</strong>, Teng Sun, Fuli Feng and Tat-Seng Chua
+      <br>Honghui Bao, Wenjie Wang, *Xinyu Lin,<strong>*Fengbin Zhu</strong>, Teng Sun, Fuli Feng and Tat-Seng Chua
     <br>RecSys 2025 (<font color='red'>Oral</font>)
   </td> 
   </tr>
