--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ Email: zhfengbin AT gmail.com</a><br>
   <tr>
     <td class="left"><a href="https://arxiv.org/pdf/2506.13229" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">IGD: Token Decisiveness Modeling via Information Gain in LLMs for Personalized Recommendation</span> 
-      <br>Zijie Lin, Yang Zhang, Xiaoyan Zhao, <strong>*Fengbin Zhu</strong>, Fuli Feng, Tat-Seng Chua
+      <br>Zijie Lin, *Yang Zhang, Xiaoyan Zhao, <strong>*Fengbin Zhu</strong>, Fuli Feng, Tat-Seng Chua
     <br>NeurIPs 2025 
   </td> 
   </tr>
