--- a/index.html
+++ b/index.html
@@ -485,6 +485,7 @@ Email: zhfengbin AT gmail.com</a><br>
     Co-organizer of <span class="title">The 2nd Financial Information Retrieval (FinIR) Workshop at SIGIR 2025 </span> <br>
     Co-organizer of <span class="title">a Tutorial at SIGIR 2025: Long Context vs. RAG </span> <br>
     Session Chair of <span class="title">ACM International Conference on AI in Finance (ICAIF 2024)  </span> <br>
+    Program Committee Member of <span class="title">ACM The Web Conf (2026) </span> <br>
     Program Committee Member of <span class="title">ACM WSDM (2026) </span> <br>
 	Program Committee Member of <span class="title">ACM SIGIR (2025) </span> <br> 
     Program Committee Member of <span class="title">ICCV (2025) </span> <br>
