--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ Email: zhfengbin AT gmail.com</a><br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td class="left"><a href="https://dl.acm.org/doi/10.1145/3726302.3730108" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Unified Category and Style Generalization for Instance-Level Sketch Retrieval</span> 
       <br>Zechao Hu, Zhengwei Yang, Hao Li, Yixiong Zou, <strong>Fengbin Zhu</strong>, and Zheng Wang
     <br>SIGIR 2025 (<font color='red'>Oral</font>)
