--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
     <h2>News</h2><br>
     <font size="3px">
 
-			
+	<b>Oct 2025</b><br>
+    <span class="easylink">
+    【MMM'26】The paper of MMDocBench has been accepted by MMM 2025!
+    </span><br><br>	
+		
 	 <b>Sep 2025</b><br>
     <span class="easylink">
     【NeurIPs'25】One paper has been accepted by NeurIPs 2025 about <b>LLM-based Personalized Recommendation</b>!
@@ -157,6 +161,7 @@ Email: zhfengbin AT gmail.com</a><br>
 
 <br>
 
+	
 <!-- =======================================================================!-->
 
 <div>
@@ -386,7 +391,7 @@ Email: zhfengbin AT gmail.com</a><br>
     <td class="left"><a href="https://arxiv.org/abs/2410.21311" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">MMDocBench: Benchmarking Large Vision-Language Models for Fine-Grained Visual Document Understanding</span> 
       <br><strong>Fengbin Zhu</strong>, Ziyang Liu, Xiang Yao NG, Haohui Wu, Wenjie Wang, Fuli Feng, Chao Wang, Huanbo Luan, and Tat-Seng Chua
-    <br>Arxiv 2024
+    <br>MMM 2026
   </td> 
   </tr>
  </tbody>
