--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 	<b>Oct 2025</b><br>
     <span class="easylink">
-    【MMM'26】The paper of MMDocBench has been accepted by MMM 2025!
+    【MMM'26】The paper of <a href-"https://mmdocbench.github.io/" target="_blank">MMDocBench</a> has been accepted by MMM 2026!
     </span><br><br>	
 		
 	 <b>Sep 2025</b><br>
