--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ Email: zhfengbin AT gmail.com</a><br>
   <tbody>
   <tr>
     <td class="left"><a href="https://arxiv.org/abs/2410.21311" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">MMDocBench: Benchmarking Large Vision-Language Models for Fine-Grained Visual Document Understanding</span> 
+    <td><span class="title">MMDocBench: Benchmarking Large Vision-Language Models for Fine-Grained Visual Document Understanding and Grounding</span> 
       <br><strong>Fengbin Zhu</strong>, Ziyang Liu, Xiang Yao NG, Haohui Wu, Wenjie Wang, Fuli Feng, Chao Wang, Huanbo Luan, and Tat-Seng Chua
     <br>MMM 2026
   </td> 
