--- a/index.html
+++ b/index.html
@@ -499,8 +499,8 @@ Email: zhfengbin AT gmail.com</a><br>
     Program Committee Member of <span class="title">COLING (2025) </span> <br>
     Program Committee Member of <span class="title">ACM MM (2022, 2023, 2024) </span> <br>
     Program Committee Member of <span class="title">AAAI (2023, 2024)  </span> <br>
-    Invited Reviewer for <span class="title">IEEE TKDE, TMM, TIP, TBD, TCSVT </span> <br>
-    Invited Reviewer for <span class="title">ACM TOIS, TOMM </span> <br>
+    Invited Reviewer for <span class="title">IEEE TKDE, TMM, TIP, TBD, TCSVT</span> <br>
+    Invited Reviewer for <span class="title">ACM CSUR, TOIS, TOMM </span> <br>
 </td></tr></tbody></table>
 
 <h2 style="CLEAR: both;">Education</h2>
