--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ Email: zhfengbin AT gmail.com</a><br>
 </tbody></table>
 
 <div style="margin-top:20px;">
-  I am a Postdoc Research Fellow at <a href="https://www.nextcenter.org/" , target="_blank"> NExT Research Center </a> National University of Singapore (NUS), working with  <a href="https://www.chuatatseng.com/" , target="_blank"> Prof. Tat-Seng Chua</a>. I earned my PhD from NUS in June 2024, also supervised by Prof. Chua. My research interests include Multimodal/heterogeneous retrieval, Understanding and Reasoning, LLM-based Agents, LLM Evaluation, and AI for Finance. 
+  I am a Postdoc Research Fellow at <a href="https://www.nextcenter.org/" , target="_blank"> NExT Research Center </a> National University of Singapore (NUS), working with  <a href="https://www.chuatatseng.com/" , target="_blank"> Prof. Tat-Seng Chua</a>. My research interests include Multimodal/Heterogeneous Retrieval, Understanding and Reasoning, LLM Evaluation, and AI for Finance. 
 </div>
 
 <br>
@@ -486,19 +486,20 @@ Email: zhfengbin AT gmail.com</a><br>
 
 <h2 style="CLEAR: both;">Professional Services</h2>
 <table><tbody><tr><td>
-    Local Co-chair of <span class="title">ACM International Conference on AI in Finance (ICAIF 2025) </span> <br>
+	Member of the Executive Committee of ACM International Conference on AI in Finance (ICAIF) </span> <br>
+    Local Co-chair of <span class="title">ACM ICAIF 2025</span> <br>
 	Co-Organizer of <span class="title">Agentic AI in Financial Services Workshop at AAAI'2026 </span> <br>
     Co-Organizer of <span class="title">The 2nd Financial Information Retrieval (FinIR) Workshop at SIGIR 2025 </span> <br>
     Co-Organizer of <span class="title">a Tutorial at SIGIR 2025: Long Context vs. RAG </span> <br>
     Session Chair of <span class="title">ACM International Conference on AI in Finance (ICAIF 2024)  </span> <br>
-    Program Committee Member of <span class="title">ACM The Web Conf (2026) </span> <br>
-    Program Committee Member of <span class="title">ACM WSDM (2026) </span> <br>
-	Program Committee Member of <span class="title">ACM SIGIR (2025) </span> <br> 
-    Program Committee Member of <span class="title">ICCV (2025) </span> <br>
-    Program Committee Member of <span class="title">ACL ARR (2024, 2025) </span> <br>
-    Program Committee Member of <span class="title">COLING (2025) </span> <br>
-    Program Committee Member of <span class="title">ACM MM (2022, 2023, 2024) </span> <br>
-    Program Committee Member of <span class="title">AAAI (2023, 2024)  </span> <br>
+    PC Member of <span class="title">ACM The Web Conf (2026) </span> <br>
+    PC Member of <span class="title">ACM WSDM (2026) </span> <br>
+	PC Member of <span class="title">ACM SIGIR (2025) </span> <br> 
+    PC Member of <span class="title">ICCV (2025) </span> <br>
+    PC Member of <span class="title">ACL ARR (2024, 2025) </span> <br>
+    PC Member of <span class="title">COLING (2025) </span> <br>
+    PC Member of <span class="title">ACM MM (2022, 2023, 2024) </span> <br>
+    PC Member of <span class="title">AAAI (2023, 2024)  </span> <br>
     Invited Reviewer for <span class="title">IEEE TKDE, TMM, TIP, TBD, TCSVT</span> <br>
     Invited Reviewer for <span class="title">ACM CSUR, TOIS, TOMM </span> <br>
 </td></tr></tbody></table>
