--- a/index.html
+++ b/index.html
@@ -487,11 +487,13 @@ Email: zhfengbin AT gmail.com</a><br>
 <h2 style="CLEAR: both;">Professional Services</h2>
 <table><tbody><tr><td>
 	Member of the <span class="title">Executive Committee of ACM International Conference on AI in Finance (ICAIF) </span> <br>
-    Local Co-chair of <span class="title">ACM ICAIF 2025</span> <br>
-	Co-Organizer of <span class="title">Agentic AI in Financial Services Workshop at AAAI'2026 </span> <br>
+    Local Co-chair of <span class="title">ACM ICAIF 2025 </span> <br>
+	Co-Organizer of <span class="title">Agentic AI in Financial Services Workshop at AAAI 2026 </span> <br>
     Co-Organizer of <span class="title">The 2nd Financial Information Retrieval (FinIR) Workshop at SIGIR 2025 </span> <br>
     Co-Organizer of <span class="title">a Tutorial at SIGIR 2025: Long Context vs. RAG </span> <br>
     Session Chair of <span class="title">ACM ICAIF 2024 </span> <br>
+	Area Chair of <span class="title">ACL (2025, 2026) </span> <br>
+	Area Chair of <span class="title">ICMR (2026) </span> <br>
     PC Member of <span class="title">ACM The Web Conf (2026) </span> <br>
     PC Member of <span class="title">ACM WSDM (2026) </span> <br>
 	PC Member of <span class="title">ACM SIGIR (2025) </span> <br> 
