--- a/index.html
+++ b/index.html
@@ -487,8 +487,8 @@ Email: zhfengbin AT gmail.com</a><br>
 <h2 style="CLEAR: both;">Professional Services</h2>
 <table><tbody><tr><td>
 	Member of the <span class="title">Executive Committee of ACM International Conference on AI in Finance (ICAIF) </span> <br>
+	Member of the <span class="title">Executive Committee of CCF Digital Finance </span> <br>
     Local Co-chair of <span class="title">ACM ICAIF (2025) </span> <br>
-    Session Chair of <span class="title">ACM ICAIF (2024) </span> <br>
 	Area Chair of <span class="title">ACL (2025, 2026) </span> <br>
 	Area Chair of <span class="title">ACM ICMR (2026) </span> <br>
     PC Member of <span class="title">ACM WWW (2026) </span> <br>
