--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     <h2>News</h2><br>
     <font size="3px">
 
+		
+	<b>Dec 2025</b><br>
+    <span class="easylink">
+    【TMLR】One paper has been accepted by Transactions on Machine Learning Research (TMLR) about <b>Embedding Scaling in Recommendation System</b>!
+    </span><br><br>	
+		
 	<b>Oct 2025</b><br>
     <span class="easylink">
     【MMM'26】The paper of <a href="https://mmdocbench.github.io/" target="_blank">MMDocBench</a> has been accepted by MMM 2026!
@@ -251,6 +257,20 @@ Email: zhfengbin AT gmail.com</a><br>
 <h2 style="CLEAR: both">Publications <a href="https://scholar.google.com/citations?user=-rxzvfcAAAAJ&hl=en" target="_blank">Google Scholar</a> </h2> &nbsp;&nbsp;  #Equal Contribution  &nbsp;&nbsp;  *Corresponding Author 
 </br>
 
+	  
+	
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/pdf/2506.13229" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Understanding Embedding Scaling in Collaborative Filtering</span> 
+      <br> Yicheng He, Zhou Kaiyu, Haoyue Bai,  <strong>Fengbin Zhu</strong>, Yonghui Yang
+    <br>TMLR (2025)
+  </td> 
+  </tr>
+ </tbody>
+</table>
+	
 <table>
   <tbody>
   <tr>
