--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     <font size="3px">
 
 		
+	<b>Jan 2026</b><br> 
+    <span class="easylink">
+    【Survey】We have released a comprehensive <a href="https://www.preprints.org/frontend/manuscript/11cab45ab0d578f7080de19423eb6ffe/download_pub" target="_blank"> survey paper</a> to investigate the <b>  Mechanisms of Multi-Step Reasoning (e.g., chain of thought) in LLMs</b> through two distinct paradigms: Implicit Reasoning and Explicit Reasoning.
+	</span><br><br>	
+		
 	<b>Dec 2025</b><br>
     <span class="easylink">
     【TMLR】One paper has been accepted by Transactions on Machine Learning Research (TMLR) about <b>Embedding Scaling in Recommendation System</b>!
@@ -177,6 +182,18 @@ Email: zhfengbin AT gmail.com</a><br>
 	
 <!-- =======================================================================!-->
 <h2 style="CLEAR: both;">Conferences, Workshops, Tutorials, Competitions and Surveys</h2>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://www.preprints.org/frontend/manuscript/11cab45ab0d578f7080de19423eb6ffe/download_pub" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Opening the Black Box: A Survey on the Mechanisms of Multi-Step Reasoning in Large Language Models</span> 
+     <br>Liangming Pan, Jason Liang, Jiaran Ye, Minglai Yang, Xinyuan Lu, <strong>Fengbin Zhu</strong>
+	<br>Preprint
+  </td>
+  </tr>
+ </tbody>
+</table>
 
 <table>
   <tbody>
