--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 <div id="news">
     <h2>News</h2><br>
     <font size="3px">
-
 		
 	<b>Jan 2026</b><br> 
     <span class="easylink">
@@ -167,16 +166,42 @@ Email: zhfengbin AT gmail.com</a><br>
 </tbody></table>
 
 <div style="margin-top:20px;">
-  I am a Postdoc Research Fellow at <a href="https://www.nextcenter.org/" , target="_blank"> NExT Research Center </a> National University of Singapore (NUS), working with  <a href="https://www.chuatatseng.com/" , target="_blank"> Prof. Tat-Seng Chua</a>. My research interests include Multimodal/Heterogeneous Retrieval, Understanding and Reasoning, LLM Evaluation, and AI for Finance. 
+  I am a Postdoc Research Fellow at <a href="https://www.nextcenter.org/" , target="_blank"> NExT Research Center </a> National University of Singapore (NUS), working with  <a href="https://www.chuatatseng.com/" , target="_blank"> Prof. Tat-Seng Chua</a>. My research interests include Multimodal/Heterogeneous Retrieval, Understanding and Reasoning, LLM Evaluation, Agents and AI for Finance. 
 </div>
-
-<br>
 
 	
 <!-- =======================================================================!-->
 
-<div>
-    <font color='red'>PS: I am actively looking for highly motivated PhD/Master/Undergraduate students to collaborate on various interesting research topics above. If you have interest, please feel free to send your CV to zhfengbin@gmail.com.</font>
+<div style="CLEAR: both;">
+    <font color='red'>
+        <h3>Collaboration Opportunities:</h3>
+        I am currently seeking highly motivated PhD, Master, and Undergraduate students who are interested in research collaboration on topics such as multimodal understanding and reasoning, LLM-based agents, information retrieval, and AI for finance. <br> <br>
+
+        If you are passionate about these areas and would like to join our team or collaborate, please feel free to reach out with your CV at <a href="mailto:fengbin@nus.edu.sg">fengbin@nus.edu.sg</a>.
+    </font>
+</div>
+
+<br>
+
+<!-- ==== ADVERTISEMENT SECTION FOR IMPORTANT WORKS ==== -->
+<div id="important-work-advert" style="border: 1px solid #DAA520; border-radius: 12px; background: #FFFDE7; padding: 6px;">
+  <h3 style="margin-top: 0; color: #B8860B;">
+    🚀 Highlights
+  </h3>
+  <ul style="list-style-type: disc; margin-left: 25px; font-size: 16px; padding-left: 0;">
+    <li style="margin-bottom: 13px;">
+      <strong>OpenFinArena Platform:</strong>
+      We have released the <a href="https://OpenFinArena.com" target="_blank">OpenFinArena Platform</a> — A leading platform for evaluating professional financial AI assistants.
+    </li>
+    <li style="margin-bottom: 13px;">
+
+      <strong>New Survey Paper:</strong>
+      <a href="https://www.preprints.org/frontend/manuscript/11cab45ab0d578f7080de19423eb6ffe/download_pub" target="_blank">Opening the Black Box: A Survey on the Mechanisms of Multi-Step Reasoning in LLMs</a>
+      — A comprehensive survey of implicit and explicit reasoning paradigms in large language models.
+    </li>
+
+
+  </ul>
 </div>
 
 	
@@ -189,7 +214,7 @@ Email: zhfengbin AT gmail.com</a><br>
     <td class="left"><a href="https://www.preprints.org/frontend/manuscript/11cab45ab0d578f7080de19423eb6ffe/download_pub" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Opening the Black Box: A Survey on the Mechanisms of Multi-Step Reasoning in Large Language Models</span> 
      <br>Liangming Pan, Jason Liang, Jiaran Ye, Minglai Yang, Xinyuan Lu, <strong>Fengbin Zhu</strong>
-	<br>Preprint
+	<br>Preprints 2026
   </td>
   </tr>
  </tbody>
@@ -274,8 +299,18 @@ Email: zhfengbin AT gmail.com</a><br>
 <h2 style="CLEAR: both">Publications <a href="https://scholar.google.com/citations?user=-rxzvfcAAAAJ&hl=en" target="_blank">Google Scholar</a> </h2> &nbsp;&nbsp;  #Equal Contribution  &nbsp;&nbsp;  *Corresponding Author 
 </br>
 
-	  
-	
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/pdf/2510.13936" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">FinDeepResearch: Evaluating Deep Research Agents in Rigorous Financial Analysis</span> 
+     <br><strong>*Fengbin Zhu</strong>, Xiang Yao Ng, Ziyang Liu, Chang Liu, Xianwei Zeng, Chao Wang, Tianhui Tan, Xuan Yao, Pengyang Shao, Min Xu, Zixuan Wang, Jing Wang, Xin Lin, Junfeng Li, Jingxian Zhu, Yang Zhang, Wenjie Wang, Fuli Feng, Richang Hong, Huanbo Luan, Ke-Wei Huang, Tat-Seng Chua
+	   <br>Arxiv 2025
+  </td>
+  </tr>
+ </tbody>
+</table>
+
 <table>
   <tbody>
   <tr>
