--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Email: zhfengbin AT gmail.com</a><br>
   <ul style="list-style-type: disc; margin-left: 25px; font-size: 16px; padding-left: 0;">
     <li style="margin-bottom: 13px;">
       <strong>OpenFinArena Platform:</strong>
-      We have released the <a href="https://OpenFinArena.com" target="_blank">OpenFinArena Platform</a> — A leading platform for evaluating professional financial AI assistants.
+      We have released the <a href="https://OpenFinArena.com" target="_blank">OpenFinArena Platform</a> — A Premier Platform for Evaluating Professional Financial AI Assistants!
     </li>
     <li style="margin-bottom: 13px;">
 
